<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".ui.start.StartFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_start_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/vSignUp"
        style="@style/StartScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_sign_up"
        app:layout_constraintBottom_toTopOf="@+id/vSignIn"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/vSignIn"
        style="@style/StartScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/vWithoutRegistr"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/vWithoutRegistr"
        style="@style/StartScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_open_without_registration"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>